--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 spring:
   datasource :
-    url : jdbc:h2:./data/SMRP;
-
+    url : jdbc:postgresql://smrp.csz0y3ch3vk9.ap-northeast-2.rds.amazonaws.com:5432/postgres
+    username: wnstlr0615
+    password: Wlwns135
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
+
       show-sql: true
       ddl-auto: update
+
 ---
 spring:
   profiles: test
