--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 	id 'java'
 }
 group = 'kr.co.smrp'
-version = '0.0.4-SNAPSHOT'
+version = 'SmartMedicine2.0.0.4'
 sourceCompatibility = '11'
 
 configurations {
