--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ repositories {
 	mavenCentral()
 }
 dependencies {
+	implementation 'org.apache.pdfbox:pdfbox:1.8.14'
 	implementation('org.postgresql:postgresql')
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
