--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,15 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation group: 'org.tensorflow', name: 'tensorflow', version: '1.14.0'
+	compile group: 'org.deeplearning4j', name: 'deeplearning4j-core', version: '1.0.0-beta7'
+	compile group: 'org.deeplearning4j', name: 'deeplearning4j-nlp', version: '1.0.0-beta7'
+	compile group: 'org.deeplearning4j', name: 'deeplearning4j-modelimport', version: '1.0.0-beta7'
+	compile group: 'org.deeplearning4j', name: 'deeplearning4j-keras', version: '0.9.1'
+	testCompile group: 'org.nd4j', name: 'nd4j-x86', version: '0.4-rc3.8'
+	testCompile group: 'org.nd4j', name: 'nd4j-native', version: '1.0.0-beta7'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	runtimeOnly 'com.h2database:h2'
