--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 HELP.md
 .gradle
 build/
+src/main/resources/application.yml
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
@@ -32,3 +33,55 @@ out/
 
 ### VS Code ###
 .vscode/
+hs_err_pid22960.log
+hs_err_pid24336.log
+hs_err_pid27160.log
+hs_err_pid29672.log
+hs_err_pid30192.log
+hs_err_pid30224.log
+medicine5.json
+src/main/resources/static/
+src/main/resources/templates/
+venv/Include/
+venv/Lib/site-packages/__pycache__/
+venv/Lib/site-packages/_distutils_hack/
+venv/Lib/site-packages/distutils-precedence.pth
+venv/Lib/site-packages/easy_install.py
+venv/Lib/site-packages/pip-20.2.4.dist-info/
+venv/Lib/site-packages/pip/__init__.py
+venv/Lib/site-packages/pip/__main__.py
+venv/Lib/site-packages/pip/__pycache__/
+venv/Lib/site-packages/pip/_internal/__init__.py
+venv/Lib/site-packages/pip/_internal/__pycache__/
+venv/Lib/site-packages/pip/_internal/build_env.py
+venv/Lib/site-packages/pip/_internal/cache.py
+venv/Lib/site-packages/pip/_internal/cli/
+venv/Lib/site-packages/pip/_internal/commands/
+venv/Lib/site-packages/pip/_internal/configuration.py
+venv/Lib/site-packages/pip/_internal/distributions/
+venv/Lib/site-packages/pip/_internal/exceptions.py
+venv/Lib/site-packages/pip/_internal/index/
+venv/Lib/site-packages/pip/_internal/locations.py
+venv/Lib/site-packages/pip/_internal/main.py
+venv/Lib/site-packages/pip/_internal/models/
+venv/Lib/site-packages/pip/_internal/network/
+venv/Lib/site-packages/pip/_internal/operations/__init__.py
+venv/Lib/site-packages/pip/_internal/operations/__pycache__/
+venv/Lib/site-packages/pip/_internal/operations/check.py
+venv/Lib/site-packages/pip/_internal/operations/freeze.py
+venv/Lib/site-packages/pip/_internal/operations/install/
+venv/Lib/site-packages/pip/_internal/operations/prepare.py
+venv/Lib/site-packages/pip/_internal/pyproject.py
+venv/Lib/site-packages/pip/_internal/req/
+venv/Lib/site-packages/pip/_internal/resolution/
+venv/Lib/site-packages/pip/_internal/self_outdated_check.py
+venv/Lib/site-packages/pip/_internal/utils/
+venv/Lib/site-packages/pip/_internal/vcs/
+venv/Lib/site-packages/pip/_internal/wheel_builder.py
+venv/Lib/site-packages/pip/_vendor/
+venv/Lib/site-packages/pkg_resources/
+venv/Lib/site-packages/setuptools-50.3.2.dist-info/
+venv/Lib/site-packages/setuptools/
+venv/Scripts/
+venv/pyvenv.cfg
+"\354\225\275_\353\215\260\354\235\264\355\204\260_\354\236\205\353\240\245_\354\231\204\353\243\214.patch"
