--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ src/main/resources/application.yml
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
-
+*json
 ### STS ###
 .apt_generated
 .classpath
@@ -20,6 +20,7 @@ src/main/resources/application.yml
 *.iws
 *.iml
 *.ipr
+*.log
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
